[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/GUI/Buttons/MusicControl.gd" type="Script" id=1]
[ext_resource path="res://assets/GUI/next.png" type="Texture" id=2]
[ext_resource path="res://assets/GUI/musicbackground.png" type="Texture" id=3]
[ext_resource path="res://assets/GUI/pause.png" type="Texture" id=4]
[ext_resource path="res://assets/GUI/prev.png" type="Texture" id=5]
[ext_resource path="res://assets/GUI/progress.png" type="Texture" id=6]

[node name="Control" type="Control"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -63.0
margin_bottom = 23.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -63.0
margin_right = 1517.0
margin_bottom = 620.0
grow_vertical = 0
rect_scale = Vector2( 0.04, 0.04 )
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="MarginContainer"]
margin_right = 1580.0
margin_bottom = 620.0
texture = ExtResource( 3 )
stretch_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_right = 1580.0
margin_bottom = 518.0
size_flags_vertical = 0

[node name="Prev" type="Button" parent="MarginContainer/HBoxContainer"]
margin_right = 524.0
margin_bottom = 518.0
icon = ExtResource( 5 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="MarginContainer/HBoxContainer"]
margin_left = 528.0
margin_right = 1052.0
margin_bottom = 518.0
toggle_mode = true
pressed = true
icon = ExtResource( 4 )
flat = true

[node name="Next" type="Button" parent="MarginContainer/HBoxContainer"]
margin_left = 1056.0
margin_right = 1580.0
margin_bottom = 518.0
icon = ExtResource( 2 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_top = 560.0
margin_right = 1580.0
margin_bottom = 620.0
size_flags_vertical = 8

[node name="TextureProgress" type="TextureProgress" parent="MarginContainer/VBoxContainer"]
margin_right = 1580.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 60 )
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1
max_value = 100.0
value = 10.0
rounded = true
texture_progress = ExtResource( 6 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="MarginContainer/HBoxContainer/Prev" to="." method="_on_Prev_pressed"]
[connection signal="toggled" from="MarginContainer/HBoxContainer/Play" to="." method="_on_Play_toggled"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Next" to="." method="_on_Next_pressed"]
